--- a/spring-mvc-demo/spring-mvc-demo/pom.xml
+++ b/spring-mvc-demo/spring-mvc-demo/pom.xml
@@ -36,6 +36,12 @@
       <artifactId>spring-webmvc</artifactId>
       <version>5.3.9</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
