--- a/spring-mvc-test-libraries/pom.xml
+++ b/spring-mvc-test-libraries/pom.xml
@@ -41,6 +41,11 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.openimaj</groupId>
+      <artifactId>xuggle-video</artifactId>
+      <version>1.3.10</version>
+    </dependency>
   </dependencies>
 
   <build>
